v0.2.14 (10/02/2023) :
    - Added generation of asm in banked rom
    - Added interrupt tree call local variables declaration 
    - Added memory full message

v0.2.13 (09/17/2023) :
    - Better supergame detection (no need to have function code in banks)

v0.2.12 (09/04/2023) :
    - Added small and big sprites in multisprite.h
    - Added example_small_sprites and example_explosions
    - Moved to cc6502 v1.0.3

v0.2.11 (08/28/2023) :
    - Corrected some bugs in conio.h
    - Added holeydmacost.c example
    - Added DMA Masking vertical scrolling support

v0.2.10 (07/17/2023) :
    - Added information on zeropage memory usage
    - Better local variables memory mapping in order to avoid copies and stacking (for cc6502 v0.9.1)

v0.2.9 (07/02/2023) :
    - Moved to cc6502 v0.9

v0.2.8 (06/27/2023) :
    - Moved Pokey location to 0x4000 to make it work on real hardware

v0.2.7 (06/19/2023) :
    - Added sfx and RMTracker (Pokey music) examples

v0.2.6 (06/12/2023) :
    - Added MS_BIDIR_VERTICAL_SCROLLING and MS_HORIZONTAL_SCROLLING support
    - Added examples/exmaples_tiles.c
    - Added headers/joystick.h for joystick support
    
v0.2.5 (06/04/2023) :
    - Added memcpy function in string.h
    - multisprite.h v0.2 : Added _MS_TOP_SCROLLING_ZONE define option (for part screen scrolling only)
    - Added examples/example_score.c that displays a rolling 16-bits (5 digits) score on top
    - Added strlen function in string.h
    - Way better link algorithm by actually computing call graph (with cc6502 v0.7)

v0.2.4 (05/28/2023) :
    - Link only functions actually used (with cc6502 v0.6)
    - Added implementation of itoa in stdlib.h header
    - Removed usage of the 64 available RAM bytes between zeropage and stack shadow memory (apparently mapped)
    - Added support for NMI interrupts

v0.2.3 (05/22/2023) :
    - Added ramchip memory usage information
    - Now uses the 64 available RAM bytes between zeropage and stack shadow memory 

v0.2.2 (05/15/2023) :