@@ -1,4 +1,5 @@
 v0.2.14 (10/02/2023) :
+    - Bug corrected: current_bank is set correctly (bankswitching)
     - Added generation of asm in banked rom
     - Added interrupt tree call local variables declaration 
     - Added memory full message
